--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,58 @@
 html {
-
-}
-
-html, body {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
+  width: 100%;
+  height: 100%;
+  background-size: 	cover;
+  background-image:url("https://i.imgur.com/lt80kAk.png");
 }
 
 body {
-    
+    width: 100%;
+    height: 100%;
+}
+
+#title {
+  display: block;
+  margin: auto;
+  margin-top: 50px;
+}
+
+#quote_box {
+  z-index: 0;
+  display: block;
+  margin: auto;
+  margin-top: -20px;
+}
+
+#buttons {
+  margin: auto;
+  text-align: center;
+  margin-left: -50px;
+}
+
+#getQuote {
+  margin-left: 5px;
+  margin-right: 10px;
+  padding: 15px 40px 15px 40px;
+}
+
+#quote_text {
+  z-index: 1;
+  text-align: center;
+  margin-top: -290px;
+  margin-bottom: 280px;
+  margin-right: 50px;
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 20px;
+  color: #cc0000;
+}
+
+#tweet {
+  margin-left: 0px;
+  padding: 15px 40px 15px 40px;
+}
+
+button {
+    background: url('https://i.imgur.com/Pv4Kf34.png') 0 0 no-repeat;
 }
