--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,13 @@
 html {
-  width: 100%;
-  height: 100%;
-  background-size: 	cover;
-  background-image:url("https://i.imgur.com/lt80kAk.png");
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+  background-image: url("images/background.png");
 }
 
 body {
-    width: 100%;
-    height: 100%;
+    width: 50vw;
+    height: 50vh;
 }
 
 #title {
@@ -54,5 +54,5 @@ body {
 }
 
 button {
-    background: url('https://i.imgur.com/Pv4Kf34.png') 0 0 no-repeat;
+
 }
