--- a/src/style.css
+++ b/src/style.css
@@ -35,16 +35,15 @@ body {
 }
 
 #quote-text {
-  width: 10vw;
-  height: 3vh;
-  max-width: 275px;
-  max-height: 125px;
+  width: 400px;
+  height: 100px;
   margin: 0 auto;
-  margin-top: 125px;
+  margin-top: 105px;
+  padding-top: 0px;
   color: #cc0000;
   font-style: italic;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 22px;
 }
 
 #get-quote {
