--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@ html {
   background: url("images/background.png");
   background-size: cover;
   background-repeat: no-repeat;
+  overflow: hidden;
 }
 
 body {
